--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,14 @@
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
 	"require": {
-		"laravel/framework": "4.0.*"
+		"laravel/framework": "4.0.*",
+        "cartalyst/sentry": "dev-master",
+        "andrew13/cabinet": "dev-master"
 	},
+    "require-dev": {
+        "barryvdh/laravel-ide-helper": "dev-master",
+        "way/generators": "dev-master"
+    },
 	"autoload": {
 		"classmap": [
 			"app/commands",
