--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /bootstrap/compiled.php
 /app/logs
 /vendor
+/public/assets/js/redactor/redactor.min.js
 composer.phar
 composer.lock
+_ide_helper.php
 .DS_Store
