--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*",
-        "adamgoose/prismic-io": "dev-master"
+		"laravel/framework": "4.1.12",
+        "adamgoose/prismic-io": "dev-master",
+        "greggilbert/recaptcha": "dev-master"
 	},
     "require-dev": {
         "barryvdh/laravel-ide-helper": "dev-master",
